--- a/assets/article.less
+++ b/assets/article.less
@@ -68,7 +68,7 @@ article footer {
     }
 
     button {
-        flex: 0;
+        flex: none;
         height: 40px;
         width: auto;
         margin: 0;
@@ -103,11 +103,13 @@ article footer {
 @keyframes progress-stripe {
     0% {
         background: @logo_orange;
+        color: white;
     }
     50% {
         background: @footer_background_color;
     }
     100% {
         background: @logo_orange;
+        color: white;
     }
 }
