Slightly less prominent links

--- a/assets/article.less
+++ b/assets/article.less
@@ -21,6 +21,10 @@ article {
     h1 {
         font: normal 24px / 32px sans-serif;
         padding: 10px 0 2px 0;
+
+        a[href] {
+            text-decoration: none;
+        }
     }
     h2, h3, h4, h5, h6 {
         font: inherit;
