--- a/assets/globals.less
+++ b/assets/globals.less
@@ -44,6 +44,7 @@
     a[href] {
         color: darken(@content_text_color, 20%);
         text-decoration: underline;
+        text-decoration-color: lighten(@content_text_color, 40%);
     }
     a[href]:visited {
         color: @content_text_color;
