--- a/yarrharr/templates/index.html
+++ b/yarrharr/templates/index.html
@@ -8,11 +8,11 @@
         <link rel="apple-touch-icon-precomposed" type="image/png" href="{{ STATIC_URL }}icon.touch.png">
     </head>
     <body>
+        <div id="app"></div>
         <script src="{{ STATIC_URL }}bundle.js"></script>
         <script>
             var props = {{ props|safe }};
-            React.initializeTouchEvents(true);
-            React.render(React.createElement(Yarrharr, props), document.body);
+            ReactDOM.render(React.createElement(Yarrharr, props), document.getElementById("app"));
         </script>
     </body>
 </html>
