--- a/yarrharr/templates/index.html
+++ b/yarrharr/templates/index.html
@@ -9,10 +9,12 @@
     </head>
     <body>
         <div id="app"></div>
-        <script src="{{ STATIC_URL }}bundle.js"></script>
         <script>
             var props = {{ props|safe }};
-            ReactDOM.render(React.createElement(Yarrharr, props), document.getElementById("app"));
         </script>
+        <script>
+            var props = {{ props|safe }};
+        </script>
+        <script src="{{ STATIC_URL }}bundle.js"></script>
     </body>
 </html>
