Remove hot module reloading stuff, update docs
It has never really worked right, and I just can't tolerate the
recursion errors anymore.

--- a/yarrharr/templates/index.html
+++ b/yarrharr/templates/index.html
@@ -10,9 +10,7 @@
     <body>
         <div id="app"></div>
         <script>
-            var props = {{ props|safe }};
-        </script>
-        <script>
+            var __webpack_public_path__ = "{{ STATIC_URL|escapejs }}";
             var props = {{ props|safe }};
         </script>
         <script src="{{ STATIC_URL }}bundle.js"></script>
