--- a/assets/globals.less
+++ b/assets/globals.less
@@ -4,7 +4,9 @@
 
 @background_color: #444;
 @text_color: #eee;
+
 @toolbar_height: 40px;
+@toolbar_background_color: darken(@content_background_color, 10%);
 
 @content_text_color: rgb(20, 20, 20);
 @content_background_color: rgba(250, 250, 250, 1.0);
