--- a/assets/drop-button.less
+++ b/assets/drop-button.less
@@ -6,13 +6,14 @@
     }
     .card {
         position: fixed;
-        background: @background_color;
-        border: 2px solid lighten(@background_color, 20%);
+        background: @toolbar_background_color;
         top: @toolbar_height;
         /* TODO: Automatically orient relative to the button */
         left: @toolbar_height;
         right: @toolbar_height;
+        z-index: 0; /* Under .controls so the box-shadow doesn't overlap. */
         max-height: calc(100vh - @toolbar_height - @toolbar_height);
         overflow: auto;
+        box-shadow: 0 0 8px black;
     }
 }
