--- a/assets/view-picker.less
+++ b/assets/view-picker.less
@@ -5,13 +5,15 @@
 
     h2 {
         font: inherit;
+        text-transform: uppercase;
         color: lighten(@content_text_color, 20%);
-        margin: 0;
+        margin: 12px 0 0 0;
         padding: 0 0 0 16px;
     }
     .group {
         display: flex;
         flex-flow: row;
+        margin: 0 0 12px 0;
 
         button {
             .toolbar-button;
