Style placeholder text

--- a/assets/feed-view.less
+++ b/assets/feed-view.less
@@ -19,3 +19,11 @@
     line-height: @toolbar_height;
     padding: 0 0 0 8px;
 }
+
+/* Loading text and error messages */
+.placeholder {
+    margin: (2 * @toolbar_height) auto;
+    max-width: 34em;
+    text-align: center;
+    text-shadow: 0 0 16px rgba(0, 0, 0, 1.0);
+}
