Add specialized link widgets

--- a/assets/views/FeedView.less
+++ b/assets/views/FeedView.less
@@ -1,5 +1,10 @@
 @import "../globals.less";
 
+.feed-view {
+    /* Allow space for the floating controls */
+    padding: @toolbar_height 0 0 0;
+}
+
 .controls {
     display: flex;
     flex-flow: row;
