--- a/assets/views/ArticleView.less
+++ b/assets/views/ArticleView.less
@@ -1,6 +1,6 @@
 @import "../globals.less";
 
-.feed-view {
+.article-view {
     /* Allow space for the floating controls */
     padding: @toolbar_height 0 0 0;
 }
