Restyle RootView a bit
Also add counts to each feed.  These seem to be the combined "new" and
"saved" counts right now, though, so they're not the most useful of
numbers...

--- a/assets/globals.less
+++ b/assets/globals.less
@@ -132,7 +132,7 @@
     background: @toolbar_background_color;
     box-shadow: 0 0 8px black;
 
-    .feed-title {
+    .expand {
         flex: 1 1 auto;
         line-height: @toolbar_height;
         padding: 0 0 0 8px;
