--- a/assets/views/RootView.less
+++ b/assets/views/RootView.less
@@ -11,9 +11,26 @@
         padding: 0;
     }
 
-    .new-count {
-        background: darken(@content_background_color, 10%);
-        border-radius: 0.5em;
-        padding: 0 0.4em;
+    li {
+        display: flex;
+        flex-flow: row nowrap;
+
+        .new-link {
+            flex: 1 1 100%;
+            white-space: nowrap;
+            overflow: hidden;
+            text-overflow: ellipsis;
+
+            .new-count {
+                text-decoration: none !important;
+            }
+        }
+        .saved-link {
+            flex: 0 0 auto;
+            width: 48px;
+        }
+    }
+    li + li {
+        border-top: 1px solid darken(@content_background_color, 10%);
     }
 }
