--- a/assets/widgets/ListArticle.less
+++ b/assets/widgets/ListArticle.less
@@ -46,9 +46,16 @@
 
     .view-link {
         flex: 0 0 auto;
+        display: flex;
+        flex-flow: row nowrap;
+        align-items: center;
+
         margin: 0 0 0 4px;
         text-decoration: none !important;
-        padding: 0 32px 0 0;
+
+        .arrow {
+            margin: 0 0 0 8px;
+        }
     }
 }
 
@@ -62,6 +69,6 @@
         text-transform: uppercase;
     }
     .day {
-        font-size: 1.8em;
+        font-size: 1.2em;
     }
 }
