--- a/assets/views/ArticleView.less
+++ b/assets/views/ArticleView.less
@@ -3,4 +3,14 @@
 .article-view {
     /* Allow space for the floating controls */
     padding: @toolbar_height 0 0 0;
+
+    .controls {
+        .article-toolbar-summary {
+            min-width: 0;
+            flex: 1 1 100%;
+            text-overflow: ellipsis;
+            overflow: hidden;
+            white-space: nowrap;
+        }
+    }
 }
