--- a/assets/views/RootView.less
+++ b/assets/views/RootView.less
@@ -3,84 +3,58 @@
 .root-view {
     /* Allow space for the floating controls */
     padding: @toolbar_height 0px 4px 0px;
-    display: flex;
-    flex-flow: row wrap;
-    justify-content: space-around;
 
     .content-colors;
 
-
-    /* There are two major sections on this page: Labels and Feeds.  There are
-     * probably many more labels than feeds, so the labels are displayed in the
-     * first column alone, and the feeds get the rest of the space, flowing to
-     * multiple columns if possible. */
-    @column_width: 308px;
-    .labels {
-        flex: 0 1 @column_width;
-        padding: 0 0 0 4px;
-    }
-    .feeds {
-        flex: 1 1 @column_width;
+    .tiles {
         padding: 0 0 0 4px;
         max-width: 100%;
-
-        ul {
-            display: flex;
-            flex-flow: row wrap;
-        }
-        li {
-            flex: 1 1 @column_width;
-        }
-    }
-
-    h1 {
-        font: inherit;
-        text-transform: uppercase;
-    }
-
-    ul, li {
-        list-style: none;
-        padding: 0;
-    }
-
-    li {
         display: flex;
-        flex-flow: row nowrap;
-        align-items: center;
-        height: 48px;
-        max-width: 100%;
-        padding: 0 8px 0 0;
+        flex-flow: row wrap;
+        list-style: none;
 
-        .new-link {
-            flex: 1 1 100%;
-            white-space: nowrap;
-            overflow: hidden;
-            text-overflow: ellipsis;
-            text-decoration: none !important;
+        li {
+            flex: 1 1 308px;
+            min-width: 0;
+            display: flex;
+            flex-flow: row nowrap;
+            align-items: center;
+            height: 48px;
+            max-width: 100%;
+            padding: 0 8px 0 0;
 
-            .new-count {
+            .new-link {
+                flex: 1 1 100%;
+                min-width: 0;
+                text-decoration: none !important;
+
+                .feed-title, .new-count {
+                    width: 100%;
+                    white-space: nowrap;
+                    overflow: hidden;
+                    text-overflow: ellipsis;
+                }
             }
-        }
-        .saved-link {
-            align-self: flex-start;
-            flex: 0 0 auto;
-            text-decoration: none !important;
-            width: 48px;
-            text-align: center;
-            position: relative;
+            .saved-link {
+                align-self: flex-start;
+                flex: 0 0 48px;
+                text-decoration: none !important;
+                text-align: center;
+                position: relative;
 
-            .star-icon {
-                position: absolute;
-                top: 0;
-                left: 0;
-            }
-            .saved-count {
-                position: absolute;
-                top: 4px;
-                left: 0;
-                width: 48px;
-                height: 44px;
-                line-height: 44px;
+                .star-icon {
+                    position: absolute;
+                    top: 0;
+                    left: 0;
+                }
+                .saved-count {
+                    position: absolute;
+                    top: 4px;
+                    left: 0;
+                    width: 48px;
+                    height: 44px;
+                    line-height: 44px;
+                }
             }
         }
     }
