--- a/assets/globals.less
+++ b/assets/globals.less
@@ -2,16 +2,16 @@
  * Global variable definitions.
  */
 
-@background_color: #444;
-@text_color: #eee;
+@background_color: rgba(250, 250, 250, 1.0);
+@text_color: rgb(20, 20, 20);
 
 @toolbar_height: 40px;
 @toolbar_background_color: darken(@content_background_color, 10%);
 
 @dropdown_background_color: darken(@toolbar_background_color, 10%);
 
-@content_text_color: rgb(20, 20, 20);
-@content_background_color: rgba(250, 250, 250, 1.0);
+@content_background_color: white;
+@content_text_color: rgb(40, 40, 40);
 
 @logo_orange_light: #f17e31;
 @logo_orange: #fb6500;
@@ -130,7 +130,7 @@
     height: @toolbar_height;
     color: @content_text_color;
     background: @toolbar_background_color;
-    box-shadow: 0 0 8px black;
+    box-shadow: 0 0 8px rgba(0, 0, 0, 0.4);
 
     .expand {
         flex: 1 1 auto;
