New icons, more buttony StateToggle
* Add check (done) and heart (saved) icons.  The star icons becomes
  "new".
* Restyle the StateToggle widget to actually look like a button.  It has
  a gentle 3D effect.
* Update RootView with new icons.

--- a/assets/views/RootView.less
+++ b/assets/views/RootView.less
@@ -50,11 +50,12 @@
                 }
                 .saved-count {
                     position: absolute;
-                    top: 4px;
+                    top: 2px;
                     left: 0;
                     width: 48px;
                     height: 44px;
                     line-height: 44px;
+                    color: white;
                 }
             }
         }
