--- a/assets/globals.less
+++ b/assets/globals.less
@@ -55,6 +55,26 @@
     }
 }
 
+.button {
+    border: 0;
+    border-radius: 50%;
+    background: linear-gradient(to bottom, @background_color, darken(@background_color, 10%));
+    box-shadow: inset  1px  1.0px 3.5px lighten(@background_color, 10%),
+                inset -1px -1.0px 3.5px darken(@background_color, 20%);
+
+    &:focus {
+        outline: 1px dotted;
+    }
+    &:active {
+        background: linear-gradient(to top, @background_color, darken(@background_color, 10%));
+        box-shadow: inset  1px  1.0px 3.5px darken(@background_color, 20%),
+        inset -1px -1.0px 3.5px lighten(@background_color, 10%);
+        & > * {
+            transform: translate(1px, 1px);
+        }
+    }
+}
+
 .toolbar-button {
     display: block;
     width: auto;
