Make <button>/<a> styles consistent, fix icon size

--- a/assets/widgets/Article.less
+++ b/assets/widgets/Article.less
@@ -9,7 +9,7 @@
 }
 
 .view-wide .article-wrap {
-    margin: 0 0 4px 0;
+    margin: 0 0 4px 4px;
 
     article {
         padding: 8px 4px 0 4px;
@@ -52,7 +52,9 @@
 
         img {
             display: block;
-            margin: auto;
+            width: 24px;
+            height: 24px;
+            padding: 8px;
         }
     }
     a:link, a:visited {
