--- a/assets/widgets/Article.less
+++ b/assets/widgets/Article.less
@@ -38,26 +38,11 @@
 .tools {
     .tool-wrap {
         position: sticky;
-        top: 0;
+        top: 8px;
     }
 
     button, a {
-        display: block;
-        width: 40px;
-        height: 40px;
-        margin: 8px 0;
-        padding: 0;
-
         .button;
-
-        img {
-            display: block;
-            width: 24px;
-            height: 24px;
-            padding: 8px;
-        }
-    }
-    a:link, a:visited {
     }
 }
 
