--- a/assets/views/ArticleView.less
+++ b/assets/views/ArticleView.less
@@ -1,18 +1,5 @@
 @import "../globals.less";
 
 .article-view {
-    /* Allow space for the floating controls */
-    padding: 0 0 0 0;
-
-    .global-tools {
-        position: fixed;
-        left: 0;
-        bottom: 0;
-        width: 48px;
-        padding: 4px;
-
-        a {
-            .button;
-        }
-    }
+    padding: 0;
 }
