--- a/assets/views/FeedView.less
+++ b/assets/views/FeedView.less
@@ -1,6 +1,16 @@
 @import "../globals.less";
 
 .feed-view {
-    /* Allow space for the floating controls */
-    padding: @toolbar_height 0 0 0;
+    padding: 0;
+
+    .feed-masthead {
+        padding: 16px;
+
+        h1 {
+            font-size: 2rem;
+            font-weight: normal;
+            margin: 0;
+        }
+    }
 }
+
