--- a/assets/widgets/DropButton.less
+++ b/assets/widgets/DropButton.less
@@ -2,13 +2,16 @@
 
 .dropdown {
     position: absolute;
-    background: @dropdown_background_color;
-    top: @toolbar_height;
+    background: @background_color;
+    color: @text_color;
+    padding: 8px;
+
+    top: 48px;
     /* TODO: Automatically orient relative to the button */
-    right: 0;
-    z-index: 0; /* Under .controls so the box-shadow doesn't overlap. */
-    max-height: calc(100vh - @toolbar_height - @toolbar_height);
-    max-width: 100vw;
+    right: 4px;
+    z-index: 100;
+    max-height: calc(100vh - 52px - 4px - 8px - 8px);
+    max-width: calc(100vw - 4px - 4px - 8px - 8px);
     overflow: auto;
-    box-shadow: 0 4px 2px rgba(0, 0, 0, 0.5);
+    box-shadow: 1px 1px 4px rgba(0, 0, 0, 0.5);
 }
