Split view vs. layout, make ArticleView obey
* Split "view" into "view" (which applies to feed view) and "layout"
  (which applies to FeedView and ArticleView).
* Make ArticleView obey the selected layout, and make its view control
  button control the layout.

--- a/assets/widgets/Article.less
+++ b/assets/widgets/Article.less
@@ -1,10 +1,10 @@
 @import "../globals.less";
 
-.view-narrow .article-wrap {
+.layout-narrow .article-wrap {
     max-width: calc(40px + 34em);
 }
 
-.view-wide .article-wrap {
+.layout-wide .article-wrap {
 }
 
 .article-wrap {
